--- a/views/admin/product.hbs
+++ b/views/admin/product.hbs
@@ -28,7 +28,8 @@
     <input type="number" class="form-control" name="price" value="{{product.price}}" placeholder="Price">
   </div>
   <center>
-    <button type="submit" class="btn btn-secondary checkOut-btn">Submit</button>
+    <a href="/admin/products" type="button" class="btn btn-secondary custom-btn beside-btn">Cancel</a>
+    <button type="submit" class="btn btn-secondary custom-btn beside-btn">Submit</button>
   </center>
 </form>
 
