--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -60,8 +60,8 @@
 
 <center>
   {{#if noItems}}
-  <a type="button" class="btn btn-secondary checkOut-btn" href="/product" style="text-decoration: none; color:white">Keep Shopping</a>
+  <a type="button" class="btn btn-secondary custom-btn beside-btn" href="/product">Keep Shopping</a>
   {{else}}
-   <a type="button" class="btn btn-secondary checkOut-btn" href="/cart/check" style="text-decoration: none; color:white">Next</a>
+   <a type="button" class="btn btn-secondary custom-btn beside-btn" href="/cart/check">Next</a>
   {{/if}}
 </center>
