--- a/views/check.hbs
+++ b/views/check.hbs
@@ -91,8 +91,8 @@
 
   <center>
    
-    <a type="button" href="javascript:history.back()" class="btn btn-secondary checkOut-btn" style="text-decoration: none; color:white">Previous</a>
+    <a type="button" href="javascript:history.back()" class="btn btn-secondary custom-btn beside-btn">Previous</a>
     <input type="hidden" name="cartId" value="{{cart.dataValues.id}}">
-    <button type="submit" class="btn btn-secondary checkOut-btn">Check Out</button>
+    <button type="submit" class="btn btn-secondary custom-btn beside-btn">Check Out</button>
   </center>
 </form>
