--- a/views/user/account.hbs
+++ b/views/user/account.hbs
@@ -34,8 +34,10 @@
   </div>
   {{>alert}}
   <center>
-    <button type="submit" class="btn btn-secondary custom-btn">Update</button>
+    <a href="javascript:history.back()" type="button" class="btn btn-secondary custom-btn beside-btn">Cancel</a>
+    <button type="submit" class="btn btn-secondary custom-btn beside-btn">Update</button>
   </center>
+    
 </form>
 </div>
 
