--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -91,11 +91,6 @@
   margin-bottom: 20px;
 }
 
-.checkOut-btn {
-  width: 200px;
-  margin-top: 30px;
-}
-
 .alert {
   margin-bottom: 20px;
 }
@@ -141,7 +136,17 @@
   margin: auto;
 }
 
+.orders-btn {
+  width: 200px;
+  margin-bottom: 20px;
+}
+
 .custom-btn {
   width: 200px;
-  margin-top: 10px;
+  margin-top: 20px;
+}
+
+.beside-btn {
+  margin-left: 10px;
+  margin-right: 10px;
 }
