Sort orders, products from new to old. Remove cart after post order

--- a/views/order.hbs
+++ b/views/order.hbs
@@ -111,10 +111,10 @@
     <input type="hidden" name="TradeSha" value="{{../tradeInfo.TradeSha}}">
     <input type="hidden" name="Version" value="{{../tradeInfo.Version}}">
     <input type="hidden" name="MerchantOrderNo" value="{{../tradeInfo.MerchantOrderNo}}">
-    <button type="submit" class="btn btn-secondary custom-btn">Confirm Payment</button>
+    <button type="submit" class="btn btn-secondary custom-btn beside-btn">Confirm Payment</button>
   </form>
   {{/ifEquals}}
   <form action="/order/{{order.id}}/cancel" method="POST" style="display: inline-block;">
-    <button type="submit" class="btn btn-secondary custom-btn">Cancel Order</button>
+    <button type="submit" class="btn btn-secondary custom-btn beside-btn">Cancel Order</button>
   </form>
 </center>
