--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -3,7 +3,7 @@
   <form class="form-logIn" action="/user/login" method="POST">
     <div class="form-group">
       <label for="email">Email address</label>
-      <input type="email" class="form-control" id="email" name="email" value="admin@example.com" placeholder="Enter email">
+      <input type="email" class="form-control" id="email" name="email" value="tony@example.com" placeholder="Enter email">
     </div>
     <div class="form-group">
       <label for="password">Password</label>
