--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -2,9 +2,10 @@
 
 <h2 id="title">Backstage</h2>
 <a href="/admin/products" style="text-decoration: none;">Product</a> |
-<a href="/admin/orders" style="text-decoration: none;">Order</a>
+<a href="/admin/orders" style="text-decoration: none;">Order</a> |
+<a href="/admin/categories" style="text-decoration: none;">Category</a>
 <br>
-<a href="/admin/products/new" type="button" class="btn btn-primary add-btn">Add New Product</a>
+<a href="/admin/products/new" type="button" class="btn btn-primary add-btn">Add new product</a>
 
 <table class="table table-bordered custom-product-table">
   <thead class="thead-light">
@@ -25,7 +26,7 @@
       </td>
       <td>${{this.price}}</td>
       <td>
-        <a href="/admin/products/{{this.id}}">Edit Detail</a>
+        <a href="/admin/products/{{this.id}}">Edit</a>
       </td>
       <td>
         <form action="/admin/products/{{this.id}}?_method=DELETE" method="POST">
