--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,40 +11,52 @@
 <body>
   <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="/">SHOP</a>
-      <nav class="nav-links">
-        {{#ifEquals user.role 'admin'}}
-        <div class="nav-item">
-          <a href="/admin/products" class="btn">Backstage</a>
+    <div class="nav-item mr-auto">
+      <div class="dropdown">
+        <button class="btn dropdown-toggle" data-toggle="dropdown">
+          Collection
+        </button>
+        <div class="dropdown-menu">
+          {{#each categories}}
+          <a class="dropdown-item" href="/orders">{{this.name}}</a>
+          {{/each}}
         </div>
-        {{/ifEquals}}
-        {{#if isAuthenticated}}
-        {{else}}
-        <div class="nav-item">
-          <a class="dropdown-item" href="/user/login"><i class="fas fa-sign-in-alt fa-lg"></i></a>
-        </div>
-        {{/if}}
-        <div class="nav-item">
-          <div class="dropdown">
-            <button class="btn dropdown-title" data-toggle="dropdown">
-              <i class="fas fa-user fa-lg"></i>
-            </button>
-            <div class="dropdown-menu dropdown-menu-right">
-              <a class="dropdown-item" href="/orders">Order Tracking</a>
-              <a class="dropdown-item" href="/user/account">Account</a>
-              {{#if isAuthenticated}}
-              <form action="/user/logout" method="POST">
-                <button type="submit" class="dropdown-item" href="/user/logout">Log Out</button>
-              </form>
-              {{/if}}
-            </div>
+      </div>
+    </div>
+    <nav class="nav-links">
+      {{#ifEquals user.role 'admin'}}
+      <div class="nav-item">
+        <a href="/admin/products" class="btn">Backstage</a>
+      </div>
+      {{/ifEquals}}
+      {{#if isAuthenticated}}
+      {{else}}
+      <div class="nav-item">
+        <a class="dropdown-item" href="/user/login"><i class="fas fa-sign-in-alt fa-lg"></i></a>
+      </div>
+      {{/if}}
+      <div class="nav-item">
+        <div class="dropdown">
+          <button class="btn dropdown-title" data-toggle="dropdown">
+            <i class="fas fa-user fa-lg"></i>
+          </button>
+          <div class="dropdown-menu dropdown-menu-right">
+            <a class="dropdown-item" href="/orders">Order Tracking</a>
+            <a class="dropdown-item" href="/user/account">Account</a>
+            {{#if isAuthenticated}}
+            <form action="/user/logout" method="POST">
+              <button type="submit" class="dropdown-item" href="/user/logout">Log Out</button>
+            </form>
+            {{/if}}
           </div>
         </div>
-        <div class="nav-item">
-          <button class="btn " data-toggle="modal" data-target="#cartModal">
-            <i class="fas fa-shopping-cart fa-lg"></i>   
-          </button>
-        </div>
-      </nav>    
+      </div>
+      <div class="nav-item">
+        <button class="btn " data-toggle="modal" data-target="#cartModal">
+          <i class="fas fa-shopping-cart fa-lg"></i>   
+        </button>
+      </div>
+    </nav>    
   </nav>
   <div class="container">
     {{{body}}}
