--- a/views/admin/product.hbs
+++ b/views/admin/product.hbs
@@ -8,7 +8,16 @@
 <form action="/admin/products/{{product.id}}?_method=PUT" method="POST" enctype="multipart/form-data">
 {{/if}}
   <div class="form-group">
-    <input type="text" class="form-control" name="name" value="{{product.name}}" placeholder="Product name">
+    <label for="name">Name</label>
+    <input type="text" class="form-control" id="name" name="name" value="{{product.name}}" placeholder="Product name">
+  </div>
+  <div class="form-group">
+    <label for="category">Category Name</label>
+    <select class="form-control" id="category" name="CategoryId">
+      {{#each categories}}
+      <option value="{{this.id}}" {{#ifEquals this.id ../product.CategoryId }}selected{{/ifEquals}}>{{this.name}}</option>
+      {{/each}}
+    </select>
   </div>
   <div class="form-group">
     {{#if newProduct}}
@@ -17,15 +26,17 @@
     <img id="image" src="{{product.image}}" class="card-custom">
     {{/if}}
     <div class="inline-block">
-      <label for="file">Upload file</label>
+      <label for="file">Upload Picture</label>
       <input id="file" type="file" accept="image/*" class="form-control-file" name="image" value="{{product.image}}">
     </div>
   </div>
   <div class="form-group">
-    <textarea class="form-control" rows="6" name="description" placeholder="Add product description">{{product.description}}</textarea>
+    <label for="description">Description</label>
+    <textarea class="form-control" rows="6" id="description" name="description" placeholder="Add product description">{{product.description}}</textarea>
   </div>
   <div class="form-group">
-    <input type="number" class="form-control" name="price" value="{{product.price}}" placeholder="Price">
+    <label for="price">Price</label>
+    <input type="number" class="form-control" id="price" name="price" value="{{product.price}}" placeholder="Price">
   </div>
   <center>
     <a href="/admin/products" type="button" class="btn btn-secondary custom-btn beside-btn">Cancel</a>
