--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -11,6 +11,7 @@
   <thead class="thead-light">
     <tr class="text-center">
       <th scope="col">Product Name</th>
+      <th scope="col">Category Name</th>
       <th scope="col">Image</th>
       <th scope="col">Price</th>
       <th scope="col">Detail</th>
@@ -21,6 +22,7 @@
     {{#each products}}
     <tr class="text-center">
       <td>{{this.name}}</td>
+      <td>{{this.Category.name}}</td>
       <td>
         <img style="width: 200px;" src="{{this.image}}" alt="product_photo">
       </td>
