--- a/views/products.hbs
+++ b/views/products.hbs
@@ -19,16 +19,16 @@
 <nav aria-label="Page navigation" class="nav-bottom">
   <ul class="pagination">
     <li class="page-item">
-      <a class="page-link" href="?page={{prev}}" aria-label="Previous">
+      <a class="page-link" href="?page={{prev}}&CategoryId={{CategoryId}}" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
         <span class="sr-only">Previous</span>
       </a>
     </li>
     {{#each page}}
-    <li class="page-item"><a class="page-link" href="?page={{this}}">{{this}}</a></li>
+    <li class="page-item"><a class="page-link" href="?page={{this}}&CategoryId={{../CategoryId}}">{{this}}</a></li>
     {{/each}}
     <li class="page-item">
-      <a class="page-link" href="?page={{post}}" aria-label="Next">
+      <a class="page-link" href="?page={{post}}&CategoryId={{CategoryId}}" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
         <span class="sr-only">Next</span>
       </a>
