--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,10 +6,11 @@
   <title>SHOP</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+  <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 </head>
 <body>
-  <nav class="navbar navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="/">SHOP</a>
     <div class="nav-item mr-auto">
       <div class="dropdown">
@@ -34,7 +35,9 @@
       {{#if isAuthenticated}}
       {{else}}
       <div class="nav-item">
-        <a class="dropdown-item" href="/user/login"><i class="fas fa-sign-in-alt fa-lg"></i></a>
+        <a class="dropdown-item" href="/user/login">
+          <i class="fas fa-sign-in-alt fa-lg"></i>
+        </a>
       </div>
       {{/if}}
       <div class="nav-item">
@@ -54,7 +57,12 @@
         </div>
       </div>
       <div class="nav-item">
-        <button class="btn " data-toggle="modal" data-target="#cartModal">
+        <a class="dropdown-item" href="/favorite">
+          <i class="far fa-heart fa-lg"></i>   
+        </a>
+      </div>
+      <div class="nav-item">
+        <button class="btn" data-toggle="modal" data-target="#cartModal">
           <i class="fas fa-shopping-cart fa-lg"></i>   
         </button>
       </div>
