Add pagination function and the remove button at product page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -167,6 +167,10 @@
   display: inline-block;
 }
 
-.favorite-btn {
+.favorite-btn, .unfavorite-btn {
   margin-top: 10px;
+}
+
+.favorite-card {
+  height: 120px;
 }
