--- a/views/favorite.hbs
+++ b/views/favorite.hbs
@@ -3,11 +3,11 @@
 </div>
 
 <div class="row">
-{{#each user.FavoritedProducts}}
+{{#each FavoritedProducts}}
   <div class="card co-3">
     <a href="/product/{{this.id}}" class="a-custom" style="text-decoration:none;">
       <img class="card-img-top" src="{{this.image}}" alt="Card image cap">
-      <div class="card-body">
+      <div class="card-body favorite-card">
         <h5 class="card-title">{{this.name}}</h5>
         <p class="card-text">${{this.price}}</p>
       </div>
@@ -31,16 +31,16 @@
 <nav aria-label="Page navigation" class="nav-bottom">
   <ul class="pagination">
     <li class="page-item">
-      <a class="page-link" href="?page={{prev}}&CategoryId={{CategoryId}}" aria-label="Previous">
+      <a class="page-link" href="?page={{prev}}" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
         <span class="sr-only">Previous</span>
       </a>
     </li>
     {{#each page}}
-    <li class="page-item"><a class="page-link" href="?page={{this}}&CategoryId={{../CategoryId}}">{{this}}</a></li>
+    <li class="page-item"><a class="page-link" href="?page={{this}}">{{this}}</a></li>
     {{/each}}
     <li class="page-item">
-      <a class="page-link" href="?page={{post}}&CategoryId={{CategoryId}}" aria-label="Next">
+      <a class="page-link" href="?page={{post}}" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
         <span class="sr-only">Next</span>
       </a>
