--- a/views/product.hbs
+++ b/views/product.hbs
@@ -16,11 +16,19 @@
       <input type="hidden" name="productId" value="{{product.id}}">
       <button type="submit" class="btn btn-secondary">Add To Cart</button>
     </form>
+    {{#if product.FavoritedUsers}}
+    <form action="/favorite/{{product.id}}?_method=DELETE" method="POST" style="display: inline-block;" class="unfavorite-btn">
+      <button type="submit" class="btn btn-secondary">
+        <i class="fas fa-heart fa-lg"></i> Already At Wishlist
+      </button>
+    </form>
+    {{else}}
     <form action="/favorite/{{product.id}}" method="POST" class="favorite-btn">
       <button type="submit" class="btn btn-secondary">
         <i class="far fa-heart fa-lg"></i> Add To Wishlist  
       </button>
     </form>
+    {{/if}}
   </div>
 </div>
 
