--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -26,9 +26,9 @@
         <td>
           {{#ifEquals this.payment.dataValues.payment_method 'CREDIT'}}Credit card{{/ifEquals}}
           {{#ifEquals this.payment.dataValues.payment_method 'WEBATM'}}WebATM{{/ifEquals}}
-          {{#ifEquals this.payment.dataValues.payment_method 'VACC'}}ATM{{/ifEquals}}
-          {{#ifEquals this.payment.dataValues.payment_method 'CVS'}}Super business code payment{{/ifEquals}}
-          {{#ifEquals this.payment.dataValues.payment_method 'BARCODE'}}Super business barcode payment{{/ifEquals}}
+          {{#ifEquals this.payment.dataValues.payment_method 'ATM'}}ATM{{/ifEquals}}
+          {{#ifEquals this.payment.dataValues.payment_method 'VACC'}}Super business code payment{{/ifEquals}}
+          {{#ifEquals this.payment.dataValues.payment_method 'Barcode'}}Super business barcode payment{{/ifEquals}}
         </td>
         <td>
           {{#ifEquals this.payment_status -2}}Refund Completed{{/ifEquals}}
