--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -56,8 +56,6 @@
   </li>
 </ul>
 
-
-
 <center>
   {{#if noItems}}
   <a type="button" class="btn btn-secondary custom-btn beside-btn" href="/product">Keep Shopping</a>
@@ -65,3 +63,6 @@
    <a type="button" class="btn btn-secondary custom-btn beside-btn" href="/cart/check">Next</a>
   {{/if}}
 </center>
+
+<!-- cart modal at right side -->
+{{> rightCart}}
