--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -14,7 +14,7 @@
     {{#each orders}}
       <tr class="text-center">
         <td scope="row">
-          <a type="button" class="btn btn-secondary" href="/order/{{this.id}}">#{{this.sn}}</a>
+          <a type="button" class="btn btn-secondary" href="/order/{{this.id}}">#{{this.id}}</a>
         </td>
         <td>{{Date this.createdAt}}</td>
         <td>
@@ -40,3 +40,6 @@
     {{/each}}
   </tbody>
 </table>
+
+<!-- cart modal at right side -->
+{{> rightCart}}
