--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -1,6 +1,6 @@
 {{>alert}}
 
-<table class="table">
+<table class="table table-responsive-sm">
   <thead>
     <tr class="text-center">
       <th scope="col">Order Number</th>
