--- a/views/user/account.hbs
+++ b/views/user/account.hbs
@@ -1,5 +1,4 @@
-<h2>My Account</h2>
-<div class="account">
+<h2 class="title">My Account</h2>
 <form action="/user/account?_method=PUT" method="POST">
   <div class="form-row">
     <div class="form-group col-md-6">
@@ -39,7 +38,7 @@
   </center>
     
 </form>
-</div>
+
 
 <script src="/reset.js"></script>
 
