--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,6 +1,6 @@
 <div class="log-in">
-  <h2><i class="fas fa-sign-in-alt"></i> Log In</h2>
-  <form class="form-logIn" action="/user/login" method="POST">
+  <h2><i class="fas fa-sign-in-alt title"></i> Log In</h2>
+  <form action="/user/login" method="POST">
     <div class="form-group">
       <label for="email">Email address</label>
       <input type="email" class="form-control" id="email" name="email" value="admin@example.com" placeholder="Enter email">
