--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -1,17 +1,17 @@
 {{> alert}}
 
 <h2 id="title">Backstage</h2>
-<a href="/admin/products" style="text-decoration: none;">Product</a> |
-<a href="/admin/orders" style="text-decoration: none;">Order</a> |
-<a href="/admin/categories" style="text-decoration: none;">Category</a>
+<a href="/admin/products" style="text-decoration: none;" class="subtitle">Product</a> |
+<a href="/admin/orders" style="text-decoration: none;" class="subtitle">Order</a> |
+<a href="/admin/categories" style="text-decoration: none;" class="subtitle">Category</a>
 <br>
-<a href="/admin/products/new" type="button" class="btn btn-primary add-btn">Add new product</a>
+<a href="/admin/products/new" type="button" class="btn btn-secondary add-btn">Add new product</a>
 
-<table class="table table-bordered custom-product-table">
-  <thead class="thead-light">
+<table class="table table-bordered custom-product-table table-responsive-sm">
+  <thead class="thead thead-custom">
     <tr class="text-center">
       <th scope="col">Product Name</th>
-      <th scope="col">Category Name</th>
+      <th scope="col">Category</th>
       <th scope="col">Image</th>
       <th scope="col">Price</th>
       <th scope="col">Detail</th>
@@ -24,15 +24,15 @@
       <td>{{this.name}}</td>
       <td>{{this.Category.name}}</td>
       <td>
-        <img style="width: 200px;" src="{{this.image}}" alt="product_photo">
+        <img src="{{this.image}}" alt="product_photo" class="admin-photo">
       </td>
       <td>${{this.price}}</td>
       <td>
-        <a href="/admin/products/{{this.id}}">Edit</a>
+        <a href="/admin/products/{{this.id}}" class="edit-btn">Edit</a>
       </td>
       <td>
         <form action="/admin/products/{{this.id}}?_method=DELETE" method="POST">
-          <button type="submit" class="btn" style="margin-top: -6px;"><i class="fas fa-trash-alt"></i></button>
+          <button type="submit" class="btn trash"><i class="fas fa-trash-alt"></i></button>
         </form>
       </td>
     </tr>
