--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -1,7 +1,7 @@
 <ul class="list-group">
-  <li class="list-group-item list-group-item-dark">Check Order</li>
+  <li class="list-group-item list-group-item-secondary">Check Order</li>
   <li class="list-group-item">
-    <table class="table">
+    <table class="table table-responsive-sm">
       <thead>
         <tr>
           <th scope="col"></th>
@@ -16,18 +16,18 @@
         {{#each items}}
         <tr>
           <td scope="row">
-            <a href="/product/{{this.id}}"><img style="width: 150px;" src="{{this.image}}" alt="cartItem_photo"></a>
+            <a href="/product/{{this.id}}"><img class="cart-photo" src="{{this.image}}" alt="cartItem_photo"></a>
           </td>
           <td>
             <a href="/product/{{this.id}}" style="text-decoration: none;" class="a-custom">{{this.name}}</a>
           </td>
           <td>${{this.price}}</td>
           <td>
-             <form action="/cartItem/{{this.cartItemId}}/min" method="POST" class="inline-block">
+             <form action="/cartItem/{{this.cartItemId}}/min" method="POST" class="cart">
                 <input type="submit" id="min" type="button" value="-" >
               </form>
-              <input id="num" name="num" value="{{this.quantity}}" readonly="true" class="inline-block">
-              <form action="/cartItem/{{this.cartItemId}}/add" method="POST" class="inline-block">
+              <input id="num" name="num" value="{{this.quantity}}" readonly="true" class="cart">
+              <form action="/cartItem/{{this.cartItemId}}/add" method="POST" class="cart">
                 <input type="submit" id="add" type="button" value="+">
               </form>
           </td>
@@ -36,7 +36,7 @@
             <div class="trash">
               <form action="/cartItem?_method=DELETE" method="POST">
                 <input type="hidden" name="cartItemId" value="{{this.cartItemId}}">
-                <button type="submit" class="btn"><i class="fas fa-trash-alt fa-lg"></i></button>
+                <button type="submit" class="btn trash-cart"><i class="fas fa-trash-alt fa-lg"></i></button>
               </form>
             </div>
           </td>
