--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -35,7 +35,7 @@
       {{#if isAuthenticated}}
       {{else}}
       <div class="nav-item">
-        <a class="dropdown-item" href="/user/login">
+        <a class="dropdown-item nav-btn" href="/user/login">
           <i class="fas fa-sign-in-alt fa-lg"></i>
         </a>
       </div>
@@ -46,10 +46,7 @@
             <i class="fas fa-user fa-lg"></i>
           </button>
           <div class="dropdown-menu dropdown-menu-right">
-            {{#ifEquals user.role 'admin'}}
-            {{else}}
             <a class="dropdown-item" href="/orders">Order Tracking</a>
-            {{/ifEquals}}
             <a class="dropdown-item" href="/user/account">Account</a>
             {{#if isAuthenticated}}
             <form action="/user/logout" method="POST">
@@ -59,10 +56,8 @@
           </div>
         </div>
       </div>
-      {{#ifEquals user.role 'admin'}}
-      {{else}}
       <div class="nav-item">
-        <a class="dropdown-item" href="/favorite">
+        <a class="dropdown-item nav-btn" href="/favorite">
           <i class="far fa-heart fa-lg"></i>   
         </a>
       </div>
@@ -71,7 +66,6 @@
           <i class="fas fa-shopping-cart fa-lg"></i>   
         </button>
       </div>
-      {{/ifEquals}}
     </nav>    
   </nav>
   <div class="container">
@@ -81,5 +75,6 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+  <script src="/index.js"></script>
 </body>
 </html>
