--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -1,5 +1,5 @@
-<div class="log-in">
-  <h2><i class="fas fa-user"></i> Register</h2>
+<div class="register">
+  <h2><i class="fas fa-user title"></i> Register</h2>
   <form action="/user/register" method="POST" class="form-logIn">
     <div class="form-group">
       <label for="account">Account</label>
